<resources>
    <string name="app_name">Assignment2</string>
    <string name="action_settings">Settings</string>
    <string name="firstName">First Name</string>
    <string name="firstNameGiven">First Name (Given)</string>
    <string name="lastName">Last Name</string>
    <string name="lastNameFamily">Last Name (Family)</string>
    <string name="age">Age</string>
    <string name="emailId">Email Id</string>
    <string name="phNo">Phone No</string>
    <string name="phNumber">Phone Number</string>
    <string name="done">Done</string>
    <string name="title_activity_major_selection">MajorSelectionActivity</string>
    <string name="backBtn">Back</string>
    <string name="major">Major</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
